# agent-swarm

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  general_plan.md  package-lock.json  package.json
.claude/: settings.json
backend/: CLAUDE.md  pyproject.toml
backend/benchmarks/: baseline.json
backend/scripts/: benchmark.py  headless_sim.py  profile_tick.py  verify_e2e.py  wind_repro.py  zone_bias_probe.py
backend/src/agents/: CLAUDE.md  adaptive_weights.py  biome_profiles.py  chat_handler.py  coordinator.py  drone_reasoner.py  llm_client.py  mission_planner.py  pathfinding.py  priority_market.py  search_patterns.py
backend/src/agents/prompts/: drone_reasoner.py  mission_planner.py
backend/src/server/: main.py
backend/src/simulation/: daycycle.py  drone.py  engine.py  hazards.py  metrics.py  mission.py  presets.py  replay.py  run.py  search_map.py  serializer.py  survivors.py  types.py  weather.py
backend/src/terrain/: chunked.py  generator.py
backend/tests/: test_adaptive_weights.py  test_coordinator.py  test_drone.py  test_e2e_evidence.py  test_e2e_pipeline.py  test_e2e_websocket.py  test_engine.py  test_evidence.py  test_integration.py  test_intel_pins.py  test_metrics.py  test_mission.py  test_pathfinding.py  test_priority_market.py  test_search_map.py  test_search_map_nms.py  test_serialization.py  test_simulation_run.py  test_survivor_flee.py  test_terrain.py  test_weather_gusts.py  test_wind.py  test_wind_market.py
docs/: ARCHITECTURE.md  chunked_terrain_design.md  realistic_sar_plan.md  (+1 more)
(+39 files in other folders)
