[project]
name = "agent-swarm-backend"
version = "0.1.0"
description = "Autonomous Drone Swarm Coordination Simulator — Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "numpy>=2.0.0",
    "opensimplex>=0.4.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Tests commonly use frozen-dataclass instances as default args (e.g. Vec3()
# for fixed-position helpers). The B008 risk doesn't apply because the
# "mutable default" surface area is intentional and bounded to one test file.
"tests/*" = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
